Added the KTExcelUtils.c file Added the KTGetCellValue method Added the application path initial the dynamic link library

--- a/Makefile.vc
+++ b/Makefile.vc
@@ -8,10 +8,10 @@ RM = del
 CP = copy
 LD = link
 BIN = KTExcelTest.exe
-SRC = KTExcelTest.cpp KTExcel.cpp
-OBJ = KTExcelTest.obj KTExcel.obj
+SRC = KTExcelTest.cpp KTExcelUtils.c
+OBJ = KTExcelTest.obj KTExcelUtils.obj
 CFLAGS = -I../../ -D_UNICODE -DUNICODE /Zc:wchar_t- /O2
-WSLIB = ws2_32.lib gdi32.lib user32.lib
+WSLIB = ws2_32.lib gdi32.lib user32.lib ole32.lib
 
 $(BIN): $(OBJ)
 	$(LD) $(WSLIB) $(OBJ) /OUT:$(BIN)
