Add use time display on the end of sample test Change the project setting use wchar_t as build-in data type

--- a/Makefile.dll.vc
+++ b/Makefile.dll.vc
@@ -9,7 +9,7 @@ CP = copy
 BIN = KTExcel.dll
 SRC = KTExcel.cpp Export.c Export.def
 OBJ = KTExcel.obj Export.obj
-CFLAGS = -D_UNICODE -DUNICODE /MD /LD /Zc:wchar_t- /O2 
+CFLAGS = -D_UNICODE -DUNICODE /MD /LD /O2 
 WSLIB = 
 
 $(BIN): $(SRC)
