Change export dynamic link library target file name

--- a/Makefile.dll.vc
+++ b/Makefile.dll.vc
@@ -6,7 +6,7 @@ CC = cl
 CXX = cl
 RM = del
 CP = copy
-BIN = KTExcel.dll
+BIN = ESExcel.dll
 SRC = KTExcel.cpp Export.c Export.def
 OBJ = KTExcel.obj Export.obj
 CFLAGS = -D_UNICODE -DUNICODE /MD /LD /O2 
